# cli-todo

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  VISION.md
src/: db.rs  main.rs  mcp.rs  prompt.md  pty.rs  web.rs
static/: app.js  index.html  style.css
