[package]
name = "cli-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rust-embed = "8"
mime_guess = "2"
portable-pty = "0.9"
tui-term = "0.3"
vt100 = "0.16"
uuid = { version = "1", features = ["v4"] }
